[MONDRIAN-2147] Fixed CDbl function.