@@ -121,7 +121,7 @@ public class Vba {
             return number.doubleValue();
         } else {
             final String s = String.valueOf(expression);
-            return new Double(s).intValue();
+            return Double.valueOf(s);
         }
     }
 
